Added posts page, and complimented navbar with links to home, feed, liked, signout, profile, and add post

--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -8,6 +8,8 @@
     margin-right: 2px;
     min-width: 75px;
     text-align: center !important;
+    background-color: #292b2c;
+    color: white;
   }
   
   .Button:hover {
