--- a/src/App.module.css
+++ b/src/App.module.css
@@ -37,10 +37,22 @@
   input[type="file"] {
     display: none;
   }
+
+  .FillerImage {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+  }
+  
+  .Image {
+    max-height: 40vh;
+    max-width: 100%;
+    object-fit: contain;
+  }
   
   i {
     color: #cfced3;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     padding: 7px;
     vertical-align: middle;
   }
